--- a/syllabus/syllabus.qmd
+++ b/syllabus/syllabus.qmd
@@ -13,10 +13,14 @@ format: PrettyPDF-pdf
 #| error: false
 
 # Create short cuts for links in the markdown table
-andrew_site = "https://ajdickinson.github.io"
-andrew_email = "mailto:adickin3@uoregon.edu"
-dante_email = "mailto:dyasui@uoregon.edu"
+andrew_site = "[{{< fa cloud >}}](https://ajdickinson.github.io)"
+andrew_email = "[{{< fa paper-plane >}}](mailto:adickin3@uoregon.edu)"
+
+dante_email = "[{{< fa paper-plane >}}](mailto:dyasui@uoregon.edu)"
 dante_site = "https://cas.uoregon.edu/directory/economics/all/dyasui"
+
+# Location link
+class_link = "https://map.uoregon.edu/8f5f1a72c"
 
 # Textbook links
 dougherty = "http://smile.amazon.com/Introduction-Econometrics-Christopher-Dougherty/dp/0199676828/"
@@ -28,19 +32,22 @@ repo = "https://github.com/ajdickinson/EC320S24"
 
 # Basics
 
-|                                | **Lecture**                                      | **Lab**                               |
-|--------------------------------|--------------------------------------------------|---------------------------------------|
-| **when**                       | T & Th 12:00p--1:20p                             | W 4:00-4:50p                          |
-| **who**                        | **Andrew Dickinson**                             | **Dante Yasui**                       |
-|  \hfill {{< fa paper-plane >}} | [adickin3@uoregon.edu](`r andrew_email`)         | [dyasui@uoregon.edu](`r dante_email`) |
-|  \hfill {{< fa cloud >}}       | [ajdickinson.github.io](`r andrew_site`)         | [cas.uoregon.edu](`r dante_site`)     |
-| **office hours**               | TBA                                              | TBA (Or by appointment)               |
-| **materials**                  | [1. Introduction to Econometrics](`r dougherty`) |                                       |
-|                                | [2. Mastering 'Metrics](`r angrist`)             |                                       |
-| **repository**                 | [github.com/ajdickinson/EC320S24](`r repo`)      |                                       |
+|                  | **Lecture**                                      | **Lab**                            |
+|------------------|--------------------------------------------------|------------------------------------|
+| **when**         | **T & Th 12:00p--1:20p**                         | _asynchronous_                     |
+| **where**        | [140 Tykeson Hall](`r class_link`)               | Canvas                             |
+| **who**          | **Andrew Dickinson**                             | **Dante Yasui**                    |
+|                  | adickin3@uoregon.edu `r andrew_email`            | dyasui@uoregon.edu `r dante_email` |
+|                  | ajdickinson.github.io `r andrew_site`            |                                    |
+| **office hours** | **T & Th 1:20--2:00p**                           | TBA                                | 
+|                  | **F 10:00-11:00a**                               |                                    |
+|                  | (Or by appointment)                              | (Or by appointment)                |
+| **materials**    | [1. Introduction to Econometrics](`r dougherty`) |                                    |
+|                  | [2. Mastering 'Metrics](`r angrist`)             |                                    |
+| **repository**   | [github.com/ajdickinson/EC320S24](`r repo`)      |                                    |
 
 
-# Course summary
+# Course Summary
 
 This course introduces statistical techniques that economists use to test economic theories and to estimate the relationships between economic variables. Econometrics combines economics and statistics with data to analyze and measure economic phenomena. In this class, we will focus our attention on regression analysis--the workhorse of applied econometrics. Using calculus and introductory statistics, we will cultivate a working understanding of the theory underpinning regression analysis, emphasizing the assumptions we must make to make causal statements. Statistical programming is fundamental to practicing applied econometrics. Thus we will teach the statistical programming language \texttt{R} to apply insights from theory and learn how to work with data. To the extent that you invest the requisite time and effort, you can leave this course with marketable skills in data analysis and---most importantly---a more sophisticated understanding of the notion that *correlation does not necessarily imply causation*. 
 
@@ -51,7 +58,7 @@ This course introduces statistical techniques that economists use to test econom
 
 Learning \texttt{R} is challenging, but well worth the effort. \texttt{R} is a powerful and versatile tool for data analysis and visualization, which makes it popular among employers. If you dedicate the time and effort necessary to learn the language, you are likely to reap a handsome return on the job market. I expect that you install \texttt{R} and \textbf{RStudio} on your own computer. Don’t worry, both are free. I also recommend that you be thoughtful of how you choose to organize your saved scripts, data, and assignments (e.g. Home > Documents > Classes > EC320). For convenience, I make material available through Github.
 
-## Textbooks and other readings
+## Textbooks and Other Readings
 
 **Econometrics books:** There are two required textbooks for this course:
 
@@ -67,15 +74,14 @@ You can purchase them at the UO duckstore or your preferred online bookseller. I
 
 Math 242 (Calculus) and Math 243 (Introduction to Statistics) or equivalent.
 
-# Labs, homework, and exams
+# Labs, Assignments, and Exams
 
 ## Lab
 
-<!-- TODO: Update this section. Are all labs asynchronous? TBD. -->
+Labs will be delivered *asynchronously* this quarter. The scheduled Wednesday lab section will serve as an in depth help session where you may ask for help on Koans or ask general \texttt{R} questions. In lab section, you will learn to apply the concepts discussed in lecture using \texttt{R}. The main focus is on the practical application of statistical techniques and computational components of the bi-weekly problem sets. Lab section is *crucial* for learning the material and passing the course. 
+<!-- Our GE Dante will hold **additional office hours** on Friday mornings, **several hours before** labs assignments are due, to provide additional time to ask questions before Koans are due. -->
 
-Labs will be delivered *asynchronously* this quarter. The scheduled Wednesday lab section will serve as an in depth help session where you may ask for help on lab assignments or ask general \texttt{R} questions. In lab section, you will learn to apply the concepts discussed in lecture using \texttt{R}. The main focus is on the practical application of statistical techniques and computational components of the bi-weekly problem sets. Lab section is *crucial* for learning the material and passing the course. Our GE Colleen will hold **additional office hours** on Friday mornings, **several hours before** labs assignments are due, to provide additional time to ask questions before lab assignments are due.
-
-## Problem sets and lab assignments
+## Problem Sets and Koans
 
 Most weeks throughout the quarter, there will be two short form assignments: 
 
@@ -84,25 +90,28 @@ Most weeks throughout the quarter, there will be two short form assignments:
 
 - Due on Tuesday evenings at 11:59p each week. See Canvas for exceptions
 - \textbf{PDF} and \textbf{html} are the only file types accepted for problem sets on Canvas
+- One file per problem set is permitted
 - Your lowest problem set score will be dropped
 - Presentation matters. You may lose points for poor penmanship, scans, and presentation
 
-**Lab assignments**
-  Lab assignments will be strictly focused on developing your computational skills in R. They will be short and if you are actively keeping up with the lab section, it should not take long to complete them.
+**Koans**
+  will be strictly focused on developing your computational skills in R. They will be short and if you are actively keeping up with the lab section, it should not take long to complete them.
 
 - Due on Friday evenings at 5:00p each week. See Canvas for exceptions
-- \textbf{html} is the only file type accepted for lab assignments on Canvas
-- Lab assignments will directly relate to topics covered in lab section. Use the lab section recordings as a resource to complete these assignments
-- Your lowest lab assignment score will be dropped
+- \textbf{html} is the only file type accepted for Koans on Canvas
+- Koans will directly relate to topics covered in lab section. Use the lab section recordings as a resource to complete these assignments
+- Your lowest koan score will be dropped
 
+
+Most of the Koans will be assigned in the first half of the course. Toward the later half of the course, the problem sets will become more dependent on R and Koans will be less frequent. These problem sets will be longer and will have more time to complete them.
 
 Feel free to work together on the assignments. Unless explicitly stated, **each student is required to write and submit independent answers**. This means that word-for-word copies will not be accepted and will be viewed as academic dishonesty. In other words: You must place answers **in your own words and code**. Copying from other people (even if you worked with them) or from previous assignments is considered cheating. Both will be submitted on Canvas under the "Assignments" tab.
 
-## Late policy
+## Late Policy
 
 - Late assignments will be accepted **up to 48 hours late** with a penalty of **2% per hour late**
 - For example, when submitted 10 hours late, an assignment with a 90% score would be penalized by 20%, and the resulting final grade would be a 70%
-- One lab assignment and one problem set will be dropped at the end of the term
+- One koan and one problem set will be dropped at the end of the term
 
 ## Exams
 
@@ -114,21 +123,23 @@ There will be no option to take exams early or remotely. Adjust your travel sche
 
 The **Midterm** will be in-class and will cover material from the beginning of the term through the week before the exam. The **Final** exam will be comprehensive and will cover all material from the term. The **Take-Home Final** will be assigned during the last week of class and will be designed to test your ability to apply concepts from the course to conduct analysis on real data using \texttt{R}.
 
-## Makeup assignments
+## Makeup Assignments
 
 I do not give makeup assignments. In extreme circumstances that lead you to miss the midterm exam, I will consider re-weighting your grade toward the final. To qualify for re-weighting, you will need to notify me no later than two days after the exam.
+
+\clearpage
 
 # Grades
 
 Grades for this class will be assigned based on the following assignments: (approximately) biweekly homework assignments, one midterm exam, one final exam. Final grades will be determined based on your rank-ordered position within the class (i.e., the course is curved)^[The economics department has a uniform grading standard. In 300 and 400 level classes, roughly 65% of the class will receive A’s and B’s. I will not be able to tell you what your exact letter grade is at any point in time, because it depends on the scores of everyone else at the end of the course, but I will be able to give an assessment of your relative standing.]. The weights for the final grade:
 
-| Component           | Percentage |
-|---------------------|------------|
-| Problem sets        | 10%        |
-| Lab assignments     |  5%        |
-| Midterm exam        | 35%        |
-| Take-final exam     | 15%        |
-| Final exam          | 35%        |
+| Component            | Percentage |
+|----------------------|------------|
+| Koans                |         5% |
+| Problem sets         |        10% |
+| Midterm exam         |        35% |
+| Take-Home Final exam |        15% |
+| Final exam           |        35% |
 
 _Note:_ While assignments will be submitted on Canvas, due to any potential curving of final grades, the gradebook on Canvas may not be accurate---only an approximation. All adjustments of final grades will be done in a local spreadsheet.
 
@@ -151,7 +162,7 @@ _Note:_ While assignments will be submitted on Canvas, due to any potential curv
 8. Start problem sets __early__---so you can come ask for help 
 
 
-## Academic integrity
+## Academic Integrity
 
 I will not tolerate cheating, plagiarism, and other violations of the \href{https://studentlife.uoregon.edu/conduct}{Student Conduct Code}. If you are caught cheating or plagiarizing on any component of this course, you will receive a failing grade for the term and I will report your offense to the university. 
 
@@ -175,7 +186,7 @@ HTML slides are generated using the [quarto](https://quarto.org/). Source code f
 
 \clearpage
 
-# Tentative schedule
+# Tentative Schedule
 
 | **Class** | **Date**   | **Topic**                               | **Reading**                                |
 |-----------|------------|-----------------------------------------|--------------------------------------------|
