--- a/slides/000-intro/_004-R.qmd
+++ b/slides/000-intro/_004-R.qmd
@@ -4,9 +4,9 @@ name: R
 
 ---
 
-## What is [R]{.mono .realbig}?
+## What is [ ]{.nf}?
 
-To quote the [[R]{.mono .big} project website](https://www.r-project.org)^[[[R]{.mono} wikipedia](https://en.wikipedia.org/wiki/R_(programming_language))]
+To quote the [[ ]{.nf} project website](https://www.r-project.org)^[[[R]{.mono} wikipedia](https://en.wikipedia.org/wiki/R_(programming_language))]
 
 > R is a free software environment for statistical computing and graphics. It compiles and runs on a wide variety of UNIX platforms, Windows and MacOS.
 
@@ -14,39 +14,39 @@ To quote the [[R]{.mono .big} project website](https://www.r-project.org)^[[[R]{
 
 What does that mean?
 
-- [R] was created for the statistical and graphical work required by econometrics--written by statistical programmers
+- [ ]{.nf} was created for the statistical and graphical work required by econometrics--written by statistical programmers
 
-- [R]{.mono .big} has a vibrant, thriving online community. ([stack overflow](https://stackoverflow.com/questions/tagged/r))
+- [ ]{.nf} has a vibrant, thriving online community. ([stack overflow](https://stackoverflow.com/questions/tagged/r))
 
-- Plus it's __free__ and __open source__.
-
----
-
-## Why are we using [R]{.mono .realbig}?
-
-1\. [R]{.mono .big} is [free]{.hi} and [open source]{.hi}—saving both you and the university money.
-
-<br>
-
-2\. _Related:_ Outside of a small group of economists, private- and public-sector [employers favor [R]{.mono .big}]{.blue} over [Stata]{.mono} and most competing softwares.
-
-<br>
-
-3\. [R]{.mono .big} is very [flexible and powerful]{.hi}—adaptable to nearly any task, _e.g._, 'metrics, spatial data analysis, machine learning, web scraping, data cleaning, website building, teaching. I write all my slides, problem sets, and exams in [R]{.mono .big}.
+- Plus it's [free]{.hi}  and [open source]{.hi}
 
 ---
 
-## Why are we using [R]{.mono .realbig}?
+## Why are we using [ ]{.nf}?
 
-4\. _Related:_ [R]{.mono .big} imposes [no artificial restrictions]{.hi} on your amount of observations, variables, memory, or processing power.
-
-<br>
-
-5\. If you put in the work,^[Learning [R]{.mono} definitely requires time and effort.] you will come away with a [valuable and marketable]{.hi} tool.
+1\. [ ]{.nf} is [free]{.hi} and [open source]{.hi}—saving both you and the university money.
 
 <br>
 
-6\. I 💖 [R]{.mono .big}
+2\. _Related:_ Outside of a small group of economists, private- and public-sector [employers favor [ ]{.nf}]{.blue} over [Stata]{.hi} and most competing softwares.
+
+<br>
+
+3\. [ ]{.nf} is very [flexible and powerful]{.hi}—adaptable to nearly any task, _e.g._, 'metrics, spatial data analysis, machine learning, web scraping, data cleaning, website building, teaching. I write all my slides, problem sets, and exams in [R]{.mono}.
+
+---
+
+## Why are we using [ ]{.nf}?
+
+4\. _Related:_ [ ]{.nf} imposes [no artificial restrictions]{.hi} on your amount of observations, variables, memory, or processing power.
+
+<br>
+
+5\. If you put in the work,^[Learning [ ]{.nf} definitely requires time and effort.] you will come away with a [valuable and marketable]{.hi} tool.
+
+<br>
+
+6\. I 💖 [ ]{.nf}
 
 ---
 
@@ -90,18 +90,18 @@ theme(legend.position = "bottom",
       plot.title = element_text(size = 48))
 ```
 
-# Getting started with [R]{.mono .huge} {.inverse}
+# Getting started with [ ]{.nf} {.inverse}
 
 ---
 
-## [R]{.mono .realbig} setup for EC 320
+## [ ]{.nf} setup for EC 320
 
-### Installation
+[Installation]{.hi}
 
 You need to install [2]{.hi} pieces of software:
 
-- [[R]{.mono .big}](https://cran.r-project.org/)
-- [[Rstudio]{.mono}](https://posit.co/download/rstudio-desktop/)  
+- [[ ]{.nf}](https://cran.r-project.org/)
+- [[RStudio]{.hi}](https://posit.co/download/rstudio-desktop/)  
 
 . . .
 
@@ -111,14 +111,14 @@ For explicit instructions for how to install, follow [this tutorial](https://lea
 
 <br>
 
-[Note:]{.note} [R]{.mono .big}/[Rstudio]{.mono} installations differ by operating system
+[Note:]{.note} [ ]{.nf}/[RStudio]{.hi} installations differ by operating system
 
 ---
 
 ## [R]{.mono .realbig} setup for EC 320 
 
 ::: {.align-center}
-[R]{.mono .big} [v.]{.small} [Rstudio]{.mono .big}
+[ ]{.nf} [v.]{.small} [RStudio]{.hi}
 :::
 
 :::: {.columns}
@@ -138,29 +138,29 @@ For explicit instructions for how to install, follow [this tutorial](https://lea
 
 . . .
 
-R works without Rstudio, but Rstudio doesn't work without R
+[ ]{.nf} works without [RStudio]{.hi}, but [RStudio]{.hi} doesn't work without [ ]{.nf}
 
 ---
 
 ## R basics
 
-You will dive deeper into R in lab, but here six big points about R:
+You will dive deeper in lab, but here six big points about [ ]{.nf}:
 
 :::: {.columns}
 
 ::: {.column width="65%"}
 
-1. Everything is an __object__.
+1. Everything is an [object]{.hi}
 
-1. Every object has a __name__ and __value__.
+1. Every object has a __name__ and __value__
 
-1. You use __functions__ on these objects.
+1. You use __functions__ on these objects
 
 1. Functions come in __libraries__ (__packages__)
 
-1. R will try to __help__ you.
+1. R will try to __help__ you
 
-1. R has its __quirks__.
+1. R has its __quirks__
 
 :::
 
