Adding slides before lecture 04

--- a/slides/002-ols/020-main.qmd
+++ b/slides/002-ols/020-main.qmd
@@ -4,6 +4,7 @@ subtitle: "EC 320, Set 03"
 author: "Andrew Dickinson"
 date: last-modified
 date-format: "Spring YYYY"
+self-contained: TRUE
 format: 
   revealjs:
     theme: [default, ../styles.scss]
