Adding slides before lecture 04

--- a/slides/002-ols/020-main.qmd
+++ b/slides/002-ols/020-main.qmd
@@ -80,7 +80,7 @@ data2 = get(data(campus)) %>%
   select(crime, police)
 ```
 
-{{< include _021-prologue.qmd >}}
+<!-- {{< include _021-prologue.qmd >}} -->
 
 # Regression logic {.inverse .note}
 
