--- a/slides/005-inference/_054-ci.qmd
+++ b/slides/005-inference/_054-ci.qmd
@@ -183,12 +183,25 @@ We have a confidence interval for $\beta_1$, *i.e.,* $\left[ 0.410,\, 0.724 \rig
 
 ## Confidence intervals
 
+[_Going back to our simulation..._]{.note}
+
+. . .
+
 We drew _10,000_ samples (each of size $n = 30$) from our population and estimated our regression model for each sample:
 
-$$ Y_i = \hat{\beta}_1 + \hat{\beta}_1 X_i + \hat{u}_i $$
+$$ 
+Y_i = \hat{\beta}_1 + \hat{\beta}_1 X_i + \hat{u}_i
+$$
+
 <center>[_(repeated 10,000 times)_]{.note .small}</center>
 
-Now, let's estimate 95% confidence intervals for each of these intervals...
+. . .
+
+The true parameter values are $\beta_0 = 0$ and $\beta_1 = 0.5$
+
+. . .
+
+Let's estimate 95% confidence intervals for each of these intervals...
 
 ---
 
